# SimiCPipeline

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg
notebooks/: Tutorial_SimiCPipeline_full.ipynb  Tutorial_SimiCPipeline_preprocessing.ipynb  Tutorial_SimiCPipeline_simple.ipynb
src/simicpipeline/: __init__.py
src/simicpipeline/core/: __init__.py  aucprocessor.py  clus_regression_fixed.py  main.py  simicpreprocess.py  simicvisualization.py
src/simicpipeline/utils/: _helper_functions.py  io.py
